Fix: Sidebar title Alignment

--- a/src/css/PriceManager.css
+++ b/src/css/PriceManager.css
@@ -73,7 +73,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 30px 0px 30px;
+    padding: 15px 30px 0px 22px;
     margin-bottom: 30px;
   }
   
